--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.7.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
